# mini

./: CMakeLists.txt  README.md  SPEC.md  TODO.md
example/: fizzbuzz.mini
src/: cflow.cc  cflow.h  context.h  eval.cc  eval.h  lexer.cc  lexer.h  main.cc  panic.h  parser.cc  parser.h  report.cc  report.h  span.h  token.cc  token.h  utils.h
src/ast/: decl.h  expr.h  node.h  stmt.cc  stmt.h  type.cc  type.h
src/codegen/: asm.cc  asm.h  codegen.cc  codegen.h  context.cc  context.h  decl.cc  decl.h  eval.h  expr.cc  expr.h  stmt.cc  stmt.h  type.cc  type.h
src/hir/: README.md  decl.cc  decl.h  expr.cc  expr.h  printable.h  root.cc  root.h  stmt.cc  stmt.h  type.cc  type.h
src/hirgen/: README.md  cflow.cc  cflow.h  context.cc  context.h  decl.cc  decl.h  expr.cc  expr.h  hirgen.cc  hirgen.h  item.cc  item.h  stmt.cc  stmt.h  type.cc  type.h
src/hiropt/: hiropt.cc  hiropt.h  unused.cc  unused.h
src/mid/: decl.h  expr.h  stmt.h  type.h
src/parser/: decl.cc  decl.h  expr.cc  expr.h  parser.cc  parser.h  stmt.cc  stmt.h  stream.h  type.cc  type.h  utils.cc  utils.h
test/: run.sh
test/codes/array/: copy.mini  index.mini  init.mini  multi.mini
test/codes/call/: call_inside_call.mini  many_args.mini  many_returns.mini  recursive.mini  ref_pass.mini  return_reg.mini  return_stack.mini  value_pass.mini
test/codes/enum/: base_type.mini  compare.mini  implict_enum_convert.mini
test/codes/esizeof/: simple.mini  with_array_iter.mini
test/codes/infixexpr/: assign_returns_value.mini  with_call.mini  with_fat_object.mini
test/codes/pointer/: add.mini
test/codes/stmt/: if.mini  return.mini  while.mini
test/codes/struct/: access.mini  access_ptr.mini  copy.mini  init.mini
